--- a/papers/yul_evm_writeup/main.tex
+++ b/papers/yul_evm_writeup/main.tex
@@ -45,8 +45,8 @@
 \section{Future Work}\label{sec:futurework}
 \input{futurework}
 
-\section{Related Work}\label{sec:relatedwork}
-\input{relatedwork}
+%\section{Related Work}\label{sec:relatedwork}
+%\input{relatedwork}
 
 \section{Conclusion}\label{sec:conclusion}
 \input{conclusion}
